--- a/semantic_SfM/ssfm/pixel_picker_vscode.ipynb
+++ b/semantic_SfM/ssfm/pixel_picker_vscode.ipynb
@@ -330,6 +330,60 @@
     "for group_registered_object_id in group_registered_object_id_list:\n",
     "    print(group_registered_object_id)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 28515500)\n",
+      "114.062\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# create a 2D array with dtype of int16 and fill with -1\n",
+    "a = np.full((2, 28515500), -1, dtype=np.int16)\n",
+    "\n",
+    "print(a.shape)\n",
+    "\n",
+    "# print the memory of the array to show as MB\n",
+    "print(a.nbytes / 1e6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0]], dtype=uint16)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
