--- a/semantic_SfM/ssfm/pixel_picker_vscode.ipynb
+++ b/semantic_SfM/ssfm/pixel_picker_vscode.ipynb
@@ -452,6 +452,31 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to start the Kernel 'Python 3.6.8'. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details. Cannot find module '@jupyterlab/services'\n",
+      "\u001b[1;31mRequire stack:\n",
+      "\u001b[1;31m- /home/zchen256/.vscode-server/extensions/ms-toolsai.jupyter-2023.11.1100101639-linux-x64/dist/extension.node.js\n",
+      "\u001b[1;31m- /home/zchen256/.vscode-server/extensions/ms-toolsai.jupyter-2023.11.1100101639-linux-x64/dist/extension.node.proxy.js\n",
+      "\u001b[1;31m- /home/zchen256/.vscode-server/bin/8b3775030ed1a69b13e4f4c628c612102e30a681/out/vs/loader.js\n",
+      "\u001b[1;31m- /home/zchen256/.vscode-server/bin/8b3775030ed1a69b13e4f4c628c612102e30a681/out/bootstrap-amd.js\n",
+      "\u001b[1;31m- /home/zchen256/.vscode-server/bin/8b3775030ed1a69b13e4f4c628c612102e30a681/out/bootstrap-fork.js"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
