fixed a bug in object_registration

--- a/projects/box_canyon_park.ipynb
+++ b/projects/box_canyon_park.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,145 +129,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing image 1/129.\n",
-      "Processing image 2/129.\n",
-      "Processing image 3/129.\n",
-      "Processing image 4/129.\n",
-      "Processing image 5/129.\n",
-      "Processing image 6/129.\n",
-      "Processing image 7/129.\n",
-      "Processing image 8/129.\n",
-      "Processing image 9/129.\n",
-      "Processing image 10/129.\n",
-      "Processing image 11/129.\n",
-      "Processing image 12/129.\n",
-      "Processing image 13/129.\n",
-      "Processing image 14/129.\n",
-      "Processing image 15/129.\n",
-      "Processing image 16/129.\n",
-      "Processing image 17/129.\n",
-      "Processing image 18/129.\n",
-      "Processing image 19/129.\n",
-      "Processing image 20/129.\n",
-      "Processing image 21/129.\n",
-      "Processing image 22/129.\n",
-      "Processing image 23/129.\n",
-      "Processing image 24/129.\n",
-      "Processing image 25/129.\n",
-      "Processing image 26/129.\n",
-      "Processing image 27/129.\n",
-      "Processing image 28/129.\n",
-      "Processing image 29/129.\n",
-      "Processing image 30/129.\n",
-      "Processing image 31/129.\n",
-      "Processing image 32/129.\n",
-      "Processing image 33/129.\n",
-      "Processing image 34/129.\n",
-      "Processing image 35/129.\n",
-      "Processing image 36/129.\n",
-      "Processing image 37/129.\n",
-      "Processing image 38/129.\n",
-      "Processing image 39/129.\n",
-      "Processing image 40/129.\n",
-      "Processing image 41/129.\n",
-      "Processing image 42/129.\n",
-      "Processing image 43/129.\n",
-      "Processing image 44/129.\n",
-      "Processing image 45/129.\n",
-      "Processing image 46/129.\n",
-      "Processing image 47/129.\n",
-      "Processing image 48/129.\n",
-      "Processing image 49/129.\n",
-      "Processing image 50/129.\n",
-      "Processing image 51/129.\n",
-      "Processing image 52/129.\n",
-      "Processing image 53/129.\n",
-      "Processing image 54/129.\n",
-      "Processing image 55/129.\n",
-      "Processing image 56/129.\n",
-      "Processing image 57/129.\n",
-      "Processing image 58/129.\n",
-      "Processing image 59/129.\n",
-      "Processing image 60/129.\n",
-      "Processing image 61/129.\n",
-      "Processing image 62/129.\n",
-      "Processing image 63/129.\n",
-      "Processing image 64/129.\n",
-      "Processing image 65/129.\n",
-      "Processing image 66/129.\n",
-      "Processing image 67/129.\n",
-      "Processing image 68/129.\n",
-      "Processing image 69/129.\n",
-      "Processing image 70/129.\n",
-      "Processing image 71/129.\n",
-      "Processing image 72/129.\n",
-      "Processing image 73/129.\n",
-      "Processing image 74/129.\n",
-      "Processing image 75/129.\n",
-      "Processing image 76/129.\n",
-      "Processing image 77/129.\n",
-      "Processing image 78/129.\n",
-      "Processing image 79/129.\n",
-      "Processing image 80/129.\n",
-      "Processing image 81/129.\n",
-      "Processing image 82/129.\n",
-      "Processing image 83/129.\n",
-      "Processing image 84/129.\n",
-      "Processing image 85/129.\n",
-      "Processing image 86/129.\n",
-      "Processing image 87/129.\n",
-      "Processing image 88/129.\n",
-      "Processing image 89/129.\n",
-      "Processing image 90/129.\n",
-      "Processing image 91/129.\n",
-      "Processing image 92/129.\n",
-      "Processing image 93/129.\n",
-      "Processing image 94/129.\n",
-      "Processing image 95/129.\n",
-      "Processing image 96/129.\n",
-      "Processing image 97/129.\n",
-      "Processing image 98/129.\n",
-      "Processing image 99/129.\n",
-      "Processing image 100/129.\n",
-      "Processing image 101/129.\n",
-      "Processing image 102/129.\n",
-      "Processing image 103/129.\n",
-      "Processing image 104/129.\n",
-      "Processing image 105/129.\n",
-      "Processing image 106/129.\n",
-      "Processing image 107/129.\n",
-      "Processing image 108/129.\n",
-      "Processing image 109/129.\n",
-      "Processing image 110/129.\n",
-      "Processing image 111/129.\n",
-      "Processing image 112/129.\n",
-      "Processing image 113/129.\n",
-      "Processing image 114/129.\n",
-      "Processing image 115/129.\n",
-      "Processing image 116/129.\n",
-      "Processing image 117/129.\n",
-      "Processing image 118/129.\n",
-      "Processing image 119/129.\n",
-      "Processing image 120/129.\n",
-      "Processing image 121/129.\n",
-      "Processing image 122/129.\n",
-      "Processing image 123/129.\n",
-      "Processing image 124/129.\n",
-      "Processing image 125/129.\n",
-      "Processing image 126/129.\n",
-      "Processing image 127/129.\n",
-      "Processing image 128/129.\n",
-      "Processing image 129/129.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "image_segmentor = ImageSegmentation(sam_params)   \n",
     "image_folder_path = '../data/box_canyon_park/DJI_photos'\n",
@@ -285,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,26 +159,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "pointcloud_projector = PointcloudProjection(depth_filtering_threshold=0.2)\n",
-    "pointcloud_projector.read_camera_parameters('../data/box_canyon_park/SfM_products/agisoft_cameras.xml')\n",
-    "pointcloud_projector.read_mesh('../data/box_canyon_park/SfM_products/model.obj')\n",
-    "pointcloud_projector.read_pointcloud('../data/box_canyon_park/SfM_products/agisoft_model.las')"
+    "#pointcloud_projector = PointcloudProjection()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "pointcloud_projector.read_camera_parameters('../data/box_canyon_park/SfM_products/agisoft_cameras.xml')\n",
+    "pointcloud_projector.read_mesh('../data/box_canyon_park/SfM_products/model.obj')\n",
+    "pointcloud_projector.read_pointcloud('../data/box_canyon_park/SfM_products/agisoft_model.las')\n",
+    "\n",
+    "\n",
+    "#pointcloud_projector.read_camera_parameters('../data/box_canyon_park/SfM_products/camera.json', '../data/box_canyon_park/SfM_products/shots.geojson')\n",
+    "#pointcloud_projector.read_pointcloud('../data/box_canyon_park/SfM_products/model.las')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing frames: 100%|██████████| 129/129 [05:16<00:00,  2.46s/it]\n"
+      "Processing frames: 100%|██████████| 129/129 [08:46<00:00,  4.08s/it]\n"
      ]
     }
    ],
@@ -324,20 +202,19 @@
     "save_folder_path = '../data/box_canyon_park/associations'\n",
     "\n",
     "image_list = [f for f in os.listdir(image_folder_path) if f.endswith('.JPG')]\n",
-    "#pointcloud_projector.parallel_batch_project(image_list, save_folder_path)\n",
     "pointcloud_projector.parallel_batch_project_joblib(image_list, save_folder_path, num_workers=8)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time for building keyimage associations:  125.57547688484192\n"
+      "Time for building keyimage associations:  592.4849562644958\n"
      ]
     }
    ],
@@ -358,11 +235,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ssfm.object_registration import *"
+    "from ssfm.object_registration import *\n",
+    "from ssfm.post_processing import PostProcessing"
    ]
   },
   {
@@ -377,7 +255,6 @@
     "image_folder_path = '../data/box_canyon_park/DJI_photos'\n",
     "association_folder_path = '../data/box_canyon_park/associations'\n",
     "\n",
-    "\n",
     "# Create object registration\n",
     "t1 = time.time()\n",
     "obr = ObjectRegistration(pointcloud_path, segmentation_folder_path, association_folder_path)\n",
@@ -389,9 +266,7 @@
     "#obr.object_registration(iou_threshold=0.5)\n",
     "\n",
     "# save semantic point cloud\n",
-    "obr.save_semantic_pointcloud('../data/box_canyon_park/semantic_model_depth_filter.las')\n",
-    "\n",
-    "\n"
+    "obr.save_semantic_pointcloud('../data/box_canyon_park/associations/semantic_model.las')"
    ]
   },
   {
@@ -400,34 +275,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "add_semantics_to_pointcloud_flag = True\n",
-    "if add_semantics_to_pointcloud_flag:\n",
-    "    image_id = 269\n",
-    "    semantics_folder_path = os.path.join(association_folder_path, 'semantics', 'semantics_{}.npy'.format(image_id))\n",
-    "    save_las_path = os.path.join(association_folder_path, 'semantics', 'semantics_{}.las'.format(image_id))\n",
-    "    add_semantics_to_pointcloud(pointcloud_path, semantics_folder_path, save_las_path) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ssfm.post_processing import PostProcessing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "semantic_pc_file_path = '../data/box_canyon_park/semantic_model_depth_filter.las'\n",
+    "# shuffle semantic ids\n",
+    "semantic_pc_file_path = '../../data/box_canyon_park/semantic_model.las'\n",
     "post_processing = PostProcessing(semantic_pc_file_path)\n",
     "post_processing.shuffle_semantic_ids()\n",
-    "save_las_path = '../data/box_canyon_park/semantic_model_depth_filter_shuffled.las'\n",
+    "save_las_path = '../../data/box_canyon_park/semantic_model_shuffled.las'\n",
     "post_processing.save_semantic_pointcloud(save_las_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "pointcloud_path = '../../data/box_canyon_park/SfM_products/agisoft_model.las'\n",
+    "segmentation_folder_path = '../../data/box_canyon_park/segmentations'\n",
+    "image_folder_path = '../../data/box_canyon_park/DJI_photos'\n",
+    "association_folder_path = '../../data/box_canyon_park/associations'\n",
+    "\n",
+    "obr = ObjectRegistration(pointcloud_path, segmentation_folder_path, association_folder_path)\n",
+    "\n",
+    "add_semantics_to_pointcloud_flag = True\n",
+    "if add_semantics_to_pointcloud_flag:\n",
+    "    image_id = 128\n",
+    "    semantics_folder_path = os.path.join(association_folder_path, 'semantics', 'semantics_{}.npy'.format(image_id))\n",
+    "    save_las_path = os.path.join(association_folder_path, 'semantics', 'semantics_{}_depth_filter.las'.format(image_id))\n",
+    "    add_semantics_to_pointcloud(pointcloud_path, semantics_folder_path, save_las_path) "
    ]
   }
  ],
