added camera distortion correction

--- a/projects/box_canyon_park.ipynb
+++ b/projects/box_canyon_park.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,11 +129,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing image 1/129.\n",
+      "Processing image 2/129.\n",
+      "Processing image 3/129.\n",
+      "Processing image 4/129.\n",
+      "Processing image 5/129.\n",
+      "Processing image 6/129.\n",
+      "Processing image 7/129.\n",
+      "Processing image 8/129.\n",
+      "Processing image 9/129.\n",
+      "Processing image 10/129.\n",
+      "Processing image 11/129.\n",
+      "Processing image 12/129.\n",
+      "Processing image 13/129.\n",
+      "Processing image 14/129.\n",
+      "Processing image 15/129.\n",
+      "Processing image 16/129.\n",
+      "Processing image 17/129.\n",
+      "Processing image 18/129.\n",
+      "Processing image 19/129.\n",
+      "Processing image 20/129.\n",
+      "Processing image 21/129.\n",
+      "Processing image 22/129.\n",
+      "Processing image 23/129.\n",
+      "Processing image 24/129.\n",
+      "Processing image 25/129.\n",
+      "Processing image 26/129.\n",
+      "Processing image 27/129.\n",
+      "Processing image 28/129.\n",
+      "Processing image 29/129.\n",
+      "Processing image 30/129.\n",
+      "Processing image 31/129.\n",
+      "Processing image 32/129.\n",
+      "Processing image 33/129.\n",
+      "Processing image 34/129.\n",
+      "Processing image 35/129.\n",
+      "Processing image 36/129.\n",
+      "Processing image 37/129.\n",
+      "Processing image 38/129.\n",
+      "Processing image 39/129.\n",
+      "Processing image 40/129.\n",
+      "Processing image 41/129.\n",
+      "Processing image 42/129.\n",
+      "Processing image 43/129.\n",
+      "Processing image 44/129.\n",
+      "Processing image 45/129.\n",
+      "Processing image 46/129.\n",
+      "Processing image 47/129.\n",
+      "Processing image 48/129.\n",
+      "Processing image 49/129.\n",
+      "Processing image 50/129.\n",
+      "Processing image 51/129.\n",
+      "Processing image 52/129.\n",
+      "Processing image 53/129.\n",
+      "Processing image 54/129.\n",
+      "Processing image 55/129.\n",
+      "Processing image 56/129.\n",
+      "Processing image 57/129.\n",
+      "Processing image 58/129.\n",
+      "Processing image 59/129.\n",
+      "Processing image 60/129.\n",
+      "Processing image 61/129.\n",
+      "Processing image 62/129.\n",
+      "Processing image 63/129.\n",
+      "Processing image 64/129.\n",
+      "Processing image 65/129.\n",
+      "Processing image 66/129.\n",
+      "Processing image 67/129.\n",
+      "Processing image 68/129.\n",
+      "Processing image 69/129.\n",
+      "Processing image 70/129.\n",
+      "Processing image 71/129.\n",
+      "Processing image 72/129.\n",
+      "Processing image 73/129.\n",
+      "Processing image 74/129.\n",
+      "Processing image 75/129.\n",
+      "Processing image 76/129.\n",
+      "Processing image 77/129.\n",
+      "Processing image 78/129.\n",
+      "Processing image 79/129.\n",
+      "Processing image 80/129.\n",
+      "Processing image 81/129.\n",
+      "Processing image 82/129.\n",
+      "Processing image 83/129.\n",
+      "Processing image 84/129.\n",
+      "Processing image 85/129.\n",
+      "Processing image 86/129.\n",
+      "Processing image 87/129.\n",
+      "Processing image 88/129.\n",
+      "Processing image 89/129.\n",
+      "Processing image 90/129.\n",
+      "Processing image 91/129.\n",
+      "Processing image 92/129.\n",
+      "Processing image 93/129.\n",
+      "Processing image 94/129.\n",
+      "Processing image 95/129.\n",
+      "Processing image 96/129.\n",
+      "Processing image 97/129.\n",
+      "Processing image 98/129.\n",
+      "Processing image 99/129.\n",
+      "Processing image 100/129.\n",
+      "Processing image 101/129.\n",
+      "Processing image 102/129.\n",
+      "Processing image 103/129.\n",
+      "Processing image 104/129.\n",
+      "Processing image 105/129.\n",
+      "Processing image 106/129.\n",
+      "Processing image 107/129.\n",
+      "Processing image 108/129.\n",
+      "Processing image 109/129.\n",
+      "Processing image 110/129.\n",
+      "Processing image 111/129.\n",
+      "Processing image 112/129.\n",
+      "Processing image 113/129.\n",
+      "Processing image 114/129.\n",
+      "Processing image 115/129.\n",
+      "Processing image 116/129.\n",
+      "Processing image 117/129.\n",
+      "Processing image 118/129.\n",
+      "Processing image 119/129.\n",
+      "Processing image 120/129.\n",
+      "Processing image 121/129.\n",
+      "Processing image 122/129.\n",
+      "Processing image 123/129.\n",
+      "Processing image 124/129.\n",
+      "Processing image 125/129.\n",
+      "Processing image 126/129.\n",
+      "Processing image 127/129.\n",
+      "Processing image 128/129.\n",
+      "Processing image 129/129.\n"
+     ]
+    }
+   ],
    "source": [
     "image_segmentor = ImageSegmentation(sam_params)   \n",
+    "image_segmentor.set_distortion_correction('../data/box_canyon_park/SfM_products/agisoft_cameras.xml')\n",
     "image_folder_path = '../data/box_canyon_park/DJI_photos'\n",
     "segmentation_folder_path = '../data/box_canyon_park/segmentations'\n",
     "image_paths = [os.path.join(image_folder_path, f) for f in os.listdir(image_folder_path) if f.endswith('.JPG')]\n",
@@ -149,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,14 +322,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing frames: 100%|██████████| 129/129 [08:46<00:00,  4.08s/it]\n"
+      "Processing frames: 100%|██████████| 129/129 [06:21<00:00,  2.96s/it]\n"
      ]
     }
    ],
@@ -207,14 +344,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time for building keyimage associations:  592.4849562644958\n"
+      "Time for building keyimage associations:  103.16834735870361\n"
      ]
     }
    ],
@@ -235,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,6 +387,8 @@
    "outputs": [],
    "source": [
     "# Set paths\n",
+    "\n",
+    "#time.sleep(3600)\n",
     "pointcloud_path = '../data/box_canyon_park/SfM_products/agisoft_model.las'\n",
     "segmentation_folder_path = '../data/box_canyon_park/segmentations'\n",
     "image_folder_path = '../data/box_canyon_park/DJI_photos'\n",
