added grounding dino mask filter

--- a/projects/courtright.ipynb
+++ b/projects/courtright.ipynb
@@ -103,7 +103,7 @@
    "outputs": [],
    "source": [
     "# simple segmentation filter\n",
-    "from ssfm.mask_filter import SimpleMaskFilter"
+    "from ssfm.simple_mask_filter import SimpleMaskFilter"
    ]
   },
   {
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,19 +207,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 294/294 [01:45<00:00,  2.78it/s]\n"
+      "100%|██████████| 294/294 [04:33<00:00,  1.07it/s]\n"
      ]
     }
    ],
    "source": [
-    "smc_solver = KeyimageAssociationsBuilder('../data/courtright/associations', '../data/courtright/segmentations_filtered')\n",
+    "smc_solver = KeyimageAssociationsBuilder('../data/courtright/associations', '../data/courtright/segmentations_filtered_semantics')\n",
     "smc_solver.build_associations()"
    ]
   },
@@ -343,7 +343,7 @@
    "source": [
     "# Set paths\n",
     "pointcloud_path = '../data/courtright/SfM_products/agisoft_model.las'\n",
-    "segmentation_folder_path = '../data/courtright/segmentations_filtered'\n",
+    "segmentation_folder_path = '../data/courtright/segmentations_filtered_semantics'\n",
     "image_folder_path = '../data/courtright/DJI_photos'\n",
     "association_folder_path = '../data/courtright/associations'\n",
     "\n",
