--- a/projects/box_canyon_park.ipynb
+++ b/projects/box_canyon_park.ipynb
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,6 +276,35 @@
     "    save_las_path = os.path.join(association_folder_path, 'semantics', 'semantics_{}_depth_filter.las'.format(image_id))\n",
     "    add_semantics_to_pointcloud(pointcloud_path, semantics_folder_path, save_las_path) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of unique semantics:  1880\n"
+     ]
+    }
+   ],
+   "source": [
+    "# shuffle semantic ids\n",
+    "semantic_pc_file_path = '../data/box_canyon_park/associations/semantics/semantics_257_depth_filter.las'\n",
+    "post_processing = PostProcessing(semantic_pc_file_path)\n",
+    "post_processing.shuffle_semantic_ids()\n",
+    "save_las_path = '../data/box_canyon_park/semantic_model_shuffled.las'\n",
+    "post_processing.save_semantic_pointcloud(save_las_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
