added graph for looking for keyimage

--- a/validation/kubric/kubric_single_gt.ipynb
+++ b/validation/kubric/kubric_single_gt.ipynb
@@ -75,7 +75,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 285/285 [00:05<00:00, 48.71it/s]\n"
+      "100%|██████████| 285/285 [00:05<00:00, 52.37it/s]\n"
      ]
     }
    ],
@@ -106,10 +106,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
     "scene_dir = '../../data/kubric_1'\n",
     "pointcloud_path = os.path.join(scene_dir, 'reconstructions', 'combined_point_cloud.las')\n",
     "associations_folder_path = os.path.join(scene_dir, 'associations')\n",
@@ -119,18 +121,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pointcloud_projector = PointcloudProjection(depth_filtering_threshold=0.2)\n",
+    "pointcloud_projector = PointcloudProjection(depth_filtering_threshold=1.8)\n",
     "pointcloud_projector.read_kubric_camera_parameters(scene_dir)\n",
     "pointcloud_projector.read_pointcloud(pointcloud_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,14 +145,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing frames: 100%|██████████| 285/285 [00:17<00:00, 16.34it/s]\n"
+      "Processing frames: 100%|██████████| 285/285 [00:16<00:00, 17.58it/s]\n"
      ]
     }
    ],
@@ -161,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,25 +173,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 285/285 [00:01<00:00, 207.17it/s]\n"
+      "100%|██████████| 285/285 [00:02<00:00, 105.02it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Building edges on GPU with 10 chunks took 1.276660680770874 seconds.\n",
+      "../../data/kubric_1/associations/graph_with_cameras.graphml\n"
      ]
     }
    ],
    "source": [
-    "smc_solver = KeyimageAssociationsBuilder(associations_folder_path, segmentations_folder_path)\n",
-    "smc_solver.build_associations()"
+    "smc_solver = KeyimageAssociationsBuilder(image_list, associations_folder_path, segmentations_folder_path)\n",
+    "smc_solver.build_associations()\n",
+    "smc_solver.build_graph(num_chunks=10)\n",
+    "\n",
+    "smc_solver.add_camera_to_graph([scene_dir], camera_type=\"Kubric\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -198,10 +211,10 @@
      "text": [
       "| Metric                                                       | Count      | Percentage           |\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "| Number of points not covered by any image                    | 985553     | 47.19                |\n",
-      "| Number of points covered by less than or equal to 1 image    | 1204612    | 57.67                |\n",
-      "| Number of points covered by less than or equal to 3 images   | 1481124    | 70.91                |\n",
-      "| Number of points covered by less than or equal to 5 images   | 1666975    | 79.81                |\n"
+      "| Number of points not covered by any image                    | 677264     | 32.07                |\n",
+      "| Number of points covered by less than or equal to 1 image    | 777788     | 36.83                |\n",
+      "| Number of points covered by less than or equal to 3 images   | 1041895    | 49.34                |\n",
+      "| Number of points covered by less than or equal to 5 images   | 1330600    | 63.01                |\n"
      ]
     }
    ],
@@ -218,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,28 +240,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----------------------------------------+-----------------------+\n",
-      "|              Memory Type               |  Memory Required (GB) |\n",
-      "+----------------------------------------+-----------------------+\n",
-      "|      Segmentation for each image       |     0.00048828125     |\n",
-      "| Pixel2point association for each image |      0.0009765625     |\n",
-      "| Point2pixel association for each image | 0.0077807605266571045 |\n",
-      "|                                        |                       |\n",
-      "|      Segmentation for all images       |     0.13916015625     |\n",
-      "| Pixel2point association for all images |      0.2783203125     |\n",
-      "| Point2pixel association for all images |   2.217516750097275   |\n",
-      "|          pc_segmentation_ids           |  0.03890380263328552  |\n",
-      "|         pc_segmentation_probs          |  0.03890380263328552  |\n",
-      "|          keyimage_association          |   0.5543791875243187  |\n",
-      "|                 Total                  |   3.2671840116381645  |\n",
-      "+----------------------------------------+-----------------------+\n"
+      "+----------------------------------------+----------------------+\n",
+      "|              Memory Type               | Memory Required (GB) |\n",
+      "+----------------------------------------+----------------------+\n",
+      "|      Segmentation for each image       |    0.00048828125     |\n",
+      "| Pixel2point association for each image |     0.0009765625     |\n",
+      "| Point2pixel association for each image | 0.007866773754358292 |\n",
+      "|                                        |                      |\n",
+      "|      Segmentation for all images       |    0.13916015625     |\n",
+      "| Pixel2point association for all images |     0.2783203125     |\n",
+      "| Point2pixel association for all images |  2.242030519992113   |\n",
+      "|          pc_segmentation_ids           | 0.03933386877179146  |\n",
+      "|         pc_segmentation_probs          | 0.03933386877179146  |\n",
+      "|          keyimage_association          |  0.5605076299980283  |\n",
+      "|                 Total                  |  3.2986863562837243  |\n",
+      "+----------------------------------------+----------------------+\n"
      ]
     }
    ],
@@ -279,15 +292,12 @@
    "outputs": [],
    "source": [
     "from ssfm.object_registration import *\n",
-    "from ssfm.post_processing import *\n",
-    "\n",
-    "keyimage_associations_file_name = 'associations_keyimage.npy'\n",
-    "keyimage_yaml_name= 'keyimages.yaml'"
+    "from ssfm.post_processing import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -308,20 +318,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing images: 100%|██████████| 285/285 [02:26<00:00,  1.95it/s]\n"
+      "Processing images:   0%|          | 0/285 [00:00<?, ?it/s]"
      ]
     }
    ],
    "source": [
     "# Create object registration\n",
-    "obr = ObjectRegistration(pointcloud_path, segmentations_folder_path, associations_folder_path, keyimage_associations_file_name=keyimage_associations_file_name)\n",
+    "obr = ObjectRegistration(pointcloud_path, segmentations_folder_path, associations_folder_path, image_list=image_list, using_graph=True)\n",
     "\n",
     "# Run object registration\n",
     "obr.object_registration(iou_threshold=0.50, save_semantics=True)"
@@ -329,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +347,7 @@
      "output_type": "stream",
      "text": [
       "Before removing small semantics: \n",
-      "maximum of semantics:  2682\n",
+      "maximum of semantics:  2591\n",
       "number of unique semantics:  202\n",
       "After removing small semantics: \n",
       "number of unique semantics:  202\n"
@@ -353,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -412,37 +422,9 @@
      "output_type": "stream",
      "text": [
       "Unique semantics in prediction:  201\n",
-      "Unique semantics in ground truth:  201\n"
+      "Unique semantics in ground truth:  201\n",
+      "mAP:  0.8432835820895523  mAR:  0.8432835820895523\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "([0.9950248756218906,\n",
-       "  0.9900497512437811,\n",
-       "  0.9850746268656716,\n",
-       "  0.9751243781094527,\n",
-       "  0.945273631840796,\n",
-       "  0.8606965174129353,\n",
-       "  0.6716417910447762,\n",
-       "  0.43781094527363185,\n",
-       "  0.263681592039801,\n",
-       "  0.04477611940298507],\n",
-       " [0.9950248756218906,\n",
-       "  0.9900497512437811,\n",
-       "  0.9850746268656716,\n",
-       "  0.9751243781094527,\n",
-       "  0.945273631840796,\n",
-       "  0.8606965174129353,\n",
-       "  0.6716417910447762,\n",
-       "  0.43781094527363185,\n",
-       "  0.263681592039801,\n",
-       "  0.04477611940298507])"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
