--- a/validation/kubric/kubric_single_gt.ipynb
+++ b/validation/kubric/kubric_single_gt.ipynb
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,25 +173,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 285/285 [00:02<00:00, 105.02it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Building edges on GPU with 10 chunks took 1.276660680770874 seconds.\n",
-      "../../data/kubric_1/associations/graph_with_cameras.graphml\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "smc_solver = KeyimageAssociationsBuilder(image_list, associations_folder_path, segmentations_folder_path)\n",
     "smc_solver.build_associations()\n",
@@ -318,14 +302,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing images:   0%|          | 0/285 [00:00<?, ?it/s]"
+      "Processing images: 100%|██████████| 285/285 [02:35<00:00,  1.84it/s]\n"
      ]
     }
    ],
